--- a/viewer.html
+++ b/viewer.html
@@ -16,7 +16,7 @@
       <input type="text" id="host">
       <label for="port">Port:</label>
       <input type="number" id="port">
-      <label for "query">Query:</label>
+      <label for="query">Query:</label>
       <input type="text" id="query">
       <button id="connect">Connect</button>
     </div>
