--- a/viewer.html
+++ b/viewer.html
@@ -13,9 +13,9 @@
 
     <div id="input">
       <label for="host">Hostname:</label>
-      <input type="text" id="host">
+      <input type="text" id="host" value="gopher.floodgap.com">
       <label for="port">Port:</label>
-      <input type="number" id="port">
+      <input type="number" id="port" value="70">
       <label for="query">Query:</label>
       <input type="text" id="query">
       <button id="connect">Connect</button>
@@ -24,7 +24,7 @@
     <script src="tcp-client.js"></script>
     <script src="gofer.js"></script>
 
-    <div id="output">Here it is.</div>
+    <div id="output">Ready.</div>
 
   </body>
 
