--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>gofer viewer</title>
+    <title>gofer</title>
     <link rel="stylesheet" href="viewer.css">
   <head>
 
@@ -24,7 +24,10 @@
     <script src="tcp-client.js"></script>
     <script src="gofer.js"></script>
 
-    <div id="output">Ready.</div>
+    <div id="output">
+      Ready to connect.<br />
+      Remember: Links and subdirectories are "queries," not attached to the hostname. Enjoy!
+    </div>
 
   </body>
 
