--- a/viewer.html
+++ b/viewer.html
@@ -9,24 +9,26 @@
 
   <body>
 
-    <h1>gofer</h1>
-
     <div id="input">
+      <div id="icon">
+        <img src="gofer_128.png" width="60px" height="60px"></img>
+      </div>
+        
+      <h1>gofer</h1>
+
       <label for="host">Hostname:</label>
       <input type="text" id="host" value="gopher.floodgap.com">
       <label for="port">Port:</label>
       <input type="number" id="port" value="70">
-      <label for="query">Query:</label>
-      <input type="text" id="query">
+      <label for="selector">Selector:</label>
+      <input type="text" id="selector">
       <button id="connect">Connect</button>
     </div>
 
     <script src="tcp-client.js"></script>
     <script src="gofer.js"></script>
 
-    <div id="output">
-      Ready to connect.<br />
-      Remember: Links and subdirectories are "queries," not attached to the hostname. Enjoy!
+    <div id="output">Ready to connect.<br />
     </div>
 
   </body>
