--- a/viewer.html
+++ b/viewer.html
@@ -8,7 +8,7 @@
   <head>
 
   <body>
-
+      
     <div id="input">
       <div id="icon">
         <img src="gofer_128.png" width="60px" height="60px"></img>
@@ -21,15 +21,14 @@
       <label for="port">Port:</label>
       <input type="number" id="port" value="70">
       <label for="selector">Selector:</label>
-      <input type="text" id="selector">
-      <button id="connect">Connect</button>
+      <input type="text" id="selector" value="">
+      <button id="connect">Get it!</button>
     </div>
+
+    <div id="output">Ready to connect.</div>
 
     <script src="tcp-client.js"></script>
     <script src="gofer.js"></script>
-
-    <div id="output">Ready to connect.<br />
-    </div>
 
   </body>
 
